static/css/mozsearch.css
/* ... */
#search-box {
  position: fixed;
  top: 0px;
  left: 0px;
  height: var(--header-height);
}

/**
 * This is named as "scrolling" For historical reason, but is no longer
 * scrolling. The html element is scrolling.
 */
#scrolling {
}

/**
 * Nesting!
 */

.nesting-depth-0 {
  --nesting-level: 0;
}
.nesting-depth-1 {
  --nesting-level: 1;
}
.nesting-depth-2 {
  --nesting-level: 2;
}
.nesting-depth-3 {
  --nesting-level: 3;
}
.nesting-depth-4 {
  --nesting-level: 4;
}
.nesting-depth-5 {
  --nesting-level: 5;
}
.nesting-depth-6 {
  --nesting-level: 6;
}
.nesting-depth-7 {
  --nesting-level: 7;
}
.nesting-depth-8 {
  --nesting-level: 8;
}
.nesting-depth-9 {
  --nesting-level: 9;
}

.nesting-sticky-line {
  /* be sticky, contained within a .nesting-container */
  position: sticky;
  /* even with our "stuck" and "last-stuck" classes, it's important to have an
   opaque background color for these because those classes don't take effect
   immediately. */
  background-color: var(--page-background);
  top: calc(
      var(--header-height) +
      var(--breadcrumbs-height) +
      var(--nesting-level) * var(--base-font-size) * var(--source-line-height)
  );
  z-index: calc(100 - var(--nesting-level));
}
/* Search results */

.search-result-header {
  padding: 0 2rem;
}

.nsresult-desc {
  padding: 2rem 2rem 0 2rem;
  font-size: 1.2rem;
}

table.results {
  margin: 0.5rem 2rem;
  width: calc(100% - 4rem);
}

/* Make context lines more subtle. */
.results tr.before-context-line,
.results tr.after-context-line {
  opacity: 0.5;
}

/* Delineate the transition between consecutive groups. */
tr.after-context-line + tr.before-context-line {
  border-top: 1px solid gray;
}

.results tr:hover,
.file tr:hover {
  background: none;
}
.results tr,
.file tr {
  border: 0;
  line-height: var(--source-line-height);
}
.file tr .line-number,
.file tr .code pre code {
  /* don't let bolded code increase the line-height - see bug 1322740 comment 9 */
  max-height: calc(var(--base-font-size) * var(--source-line-height));
}
.left-column,
.file td:first-child {
  text-align: right;
  color: #aaa;
  width: 8ex;
}
.results td {
  padding: 0.1rem 0.5rem;
}
.results a {
  cursor: pointer;
  display: inline-block;
}
.file a:target {
  background-color: gray;
  color: white;
  padding: 0 0.5rem;
}
.results code {
  white-space: pre;
}
.result-head td {
  padding-top: 0.3rem; /* Additional padding to visually separate results.*/
  padding-bottom: 0;
}
.result-head td.left-column {
  padding-right: 0.2rem; /* Moves the icon closer to the path by reducing the padding.*/
}

.result-context {
  font-style: italic;
  margin-left: 10px;
  padding-left: 4px;
  padding-right: 4px;
  color: var(--result-context-color);
}

.result-upsearch {
  padding-left: 8px;
  color: var(--link-color);
}

.section {
  text-align: right;
  font-size: 150%;
}

.result-pathkind {
  font-size: 150%;
}

.result-kind {
  font-size: var(--base-font-size);
  font-weight: 800;
}

.expando {
  cursor: pointer;
  color: var(--page-foreground);
}
/* End search results */

.file td {
  padding: 0;
}
.file pre {
  margin: 0;
}

/* Context menu */
.context-menu {
  /* absolutely positioned within the containing block of the <body> relative
     to the click event */
  position: absolute;
  width: max-content;
  background-color: var(--page-background);
  color: var(--page-color);
  margin: 0;
  padding: 0;
  border: 1px solid var(--page-border-color);
  border-radius: 6px;
  list-style: none;
  z-index: 202;
  overflow: auto;
  transition: opacity .2s ease;
}
.context-menu:not(.bottom) {
  border-top-left-radius: 0;
}
.context-menu.bottom {
  border-bottom-left-radius: 0;
}
.context-menu.left:not(.bottom) {
  border-top-left-radius: 6px;
  border-top-right-radius: 0;
}
.context-menu.left.bottom {
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 0;
}
.context-menu:focus {
  outline: none;
}
.context-menu a {
  display: block;
}
.contextmenu-expansion-preview {
  max-width: 600px;
  overflow: hidden;
  text-overflow: ellipsis;
}
.context-menu code {
  white-space: nowrap;
}
.context-menu-group-label {
  display: block;
  padding: 0.5em;
  font-weight: bold;
}
.content {
  padding: 0 0 0.5rem 0;
}

/* Breadcrumbs */
.path-separator {
  margin: 0 0.2rem;
}
.breadcrumbs {
  display: inline-block;
  margin: 0;
  padding: 1rem;
  position: sticky;
  z-index: 101;
  top: var(--header-height);
  margin: var(--breadcrumbs-margin-top) 0 1rem 0;
  padding: 0 var(--breadcrumbs-padding);
  width: 100%;
  height: var(--breadcrumbs-height);
  text-align: left;
}
.breadcrumbs.stuck {
  white-space: nowrap;
}

#tree-switcher {
  pointer-events: auto;
  background-color: transparent;
  background-image: var(--select-arrow-svg);
  background-position: center center;
  background-repeat: no-repeat;
  appearance: none;
  border: none;
  vertical-align: middle;
  width: var(--tree-switcher-width);
  height: var(--tree-switcher-height);
  border-radius: 2px;
}
#tree-switcher:hover {
  background-color: var(--list-hover-background);
}
#tree-switcher:active {
  background-color: var(--button-active-background);
}

#tree-switcher-menu {
  display: flex;
  flex-direction: row;
}

#tree-switcher-menu ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

#tree-switcher-menu ul + ul {
  border-inline-start: 1px solid var(--page-border-color);
}

#tree-switcher-menu .indent {
  padding-inline-start: 24px;
  padding-inline-end: 24px;
}

#coverage-graph-toggle {
  display: inline-flex;
  align-items: center;
  gap: .5rem;
}

#coverage-sparkline {
  display: flex;
}
/* ... */

